# shipped-it

./: .env.example  .gitignore  README.md  Taskfile.yaml  lefthook.yaml  pyproject.toml  settings.example.toml
.github/workflows/: main.yaml
docs/: conf.py
