[project]
name = "shipped-it-workspace"
version = "0.0.0"
description = "Personal tool to post announcement about product releases."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Private :: Do Not Upload",
]
dependencies = [
    "shipped_it",
]

[tool.uv.workspace]
members = [
    "packages/shipped-it",
]

[tool.uv.sources]
shipped-it = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
]
